--- a/src/main/webapp-src/src/client/styles/smartadmin.less
+++ b/src/main/webapp-src/src/client/styles/smartadmin.less
@@ -1,3 +1,4 @@
 @import "bootstrap.less";
 @import "smartadmin/smartadmin-production-plugins.less";
 @import "smartadmin/smartadmin-production.less";
+@import "smartadmin/smartadmin-skin/smartadmin-skins.less";
