--- a/src/main/webapp-src/src/client/styles/smartadmin/smartadmin-skin/smartadmin-skins.less
+++ b/src/main/webapp-src/src/client/styles/smartadmin/smartadmin-skin/smartadmin-skins.less
@@ -1,5 +1,5 @@
 @import "../elements/elements.less";
-@import "../variables.less";
+@import "../../variables.less";
 
 /********************************************************************* STYLE 1 *************************************************************/
 
